spectec/test/elab/neg/dataflow-empty-iteration-expression.spectec
;; An iterated expression contains no iteration variables, so the
;; iteration's dimension is undetermined.

syntax foo = nat

dec $f : foo*
def $f = 0*
